--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,30 @@
 {
-    "format_version": 2,
-    "header": {
-        "description": "§1Completly removes the background of the chat §r| §1by TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.0.1",
-        "name": "§1Alien's §eClearchat pack §4(V1.0.1)",
-        "uuid": "0b8617a4-2c59-4a38-9314-2c59e8b4aa6f",
-        "version": [
-            1,
-            0,
-            1
-        ],
-        "min_engine_version": [
-            1,
-            18,
-            0
-        ]
-    },
-    "modules": [
-        {
-            "description": "§1Completly removes the background of the chat §r| §1by TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.0.1",
-            "type": "resources",
-            "uuid": "aef4fd46-ed62-4ad5-b92f-270c32d756a6",
-            "version": [
-                1,
-                0,
-                1
-            ]
-        }
-    ]
+	"format_version": 2,
+	"header": {
+		"description": "§rCompletely removes the background from the chat in Minecraft Bedrock edition | §3© TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.1.0 §r",
+		"name": "§1§lAlien's§r §eClearchat §4(RP-V1.0.0)§r",
+		"uuid": "af24d1f0-3d4a-4cde-b1c1-e0722dd7fac9",
+		"version": [
+			1,
+			1,
+			0
+		],
+		"min_engine_version": [
+			1,
+			19,
+			50
+		]
+	},
+	"modules": [
+		{
+			"description": "§rCompletely removes the background from the chat in Minecraft Bedrock edition | §3© TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.1.0 §r",
+			"type": "resources",
+			"uuid": "8b87c573-c6f9-4aca-aabf-ed18ae3a1052",
+			"version": [
+				1,
+				1,
+				0
+			]
+		}
+	]
 }
